fixed "bug" in frac due to a bug(?) in learnr?

--- a/inst/tutorials/04massbalance/massbalance.Rmd
+++ b/inst/tutorials/04massbalance/massbalance.Rmd
@@ -184,9 +184,9 @@ msg <- sprintf("As $R$ is expressed in $mol~C~m^{-3}~h^{-1}$, it is simplest to 
 question("Which of the following differential equations correctly describe mass balances for the system?", type = "learnr_checkbox",
  answer("$\\frac{d[OM]}{dt} = -5\\cdot R$", correct=FALSE),
  answer("$\\frac{d[OM]}{dt} = -R$", correct=TRUE),
- answer("$\\frac{d[OM]}{dt} = -(1/5)\\cdot R$", correct=FALSE),
+ answer("$\\frac{d[OM]}{dt} = -\\frac{1}{5}\\cdot R$", correct=FALSE),
  answer("$\\frac{d[CO2]}{dt} = 5\\cdot R$", correct=FALSE),
- answer("$\\frac{d[CO2]}{dt} = (1/5)\\cdot R$", correct=FALSE),
+ answer("$\\frac{d[CO2]}{dt} = \\frac{1}{5}\\cdot R$", correct=FALSE),
  answer("$\\frac{d[CO2]}{dt} = -R$", correct=FALSE),
  answer("$\\frac{d[CO2]}{dt} = R$", correct=TRUE),
  
@@ -204,20 +204,20 @@ msg <- sprintf("As $R$ is expressed in $mol~C~m^{-3}~h^{-1}$, it is simplest to 
 question(sprintf("Which of the following differential equations correctly describe mass balances for the system?  $R$ has units of $mol~C~m^{-3}~h^{-1}$."), type = "learnr_checkbox",
  answer("$\\frac{d[NO3]}{dt} = -4\\cdot R$", correct=FALSE),
  answer("$\\frac{d[NO3]}{dt} = 4\\cdot R$", correct=FALSE),
- answer("$\\frac{d[NO3]}{dt} = -(4/5)\\cdot R$", correct=TRUE),
- answer("$\\frac{d[NO3]}{dt} = -(5/4)\\cdot R$", correct=FALSE),
+ answer("$\\frac{d[NO3]}{dt} = -\\frac{4}{5}\\cdot R$", correct=TRUE),
+ answer("$\\frac{d[NO3]}{dt} = -\\frac{5}{4}\\cdot R$", correct=FALSE),
  answer("$\\frac{d[NH3]}{dt} = -5\\cdot R$", correct=FALSE),
  answer("$\\frac{d[NH3]}{dt} = 5\\cdot R$", correct=FALSE),
- answer("$\\frac{d[NH3]}{dt} = (16/106)\\cdot R$", correct=TRUE),
- answer("$\\frac{d[NH3]}{dt} = -(16/106)\\cdot R$", correct=FALSE),
- answer("$\\frac{d[NH3]}{dt} = 5\\cdot (16/106)\\cdot R$", correct=FALSE),
- answer("$\\frac{d[NH3]}{dt} = -(106/16)\\cdot R$", correct=FALSE),
+ answer("$\\frac{d[NH3]}{dt} = \\frac{16}{106}\\cdot R$", correct=TRUE),
+ answer("$\\frac{d[NH3]}{dt} = -\\frac{16}{106}\\cdot R$", correct=FALSE),
+ answer("$\\frac{d[NH3]}{dt} = 5\\cdot \\frac{16}{106}\\cdot R$", correct=FALSE),
+ answer("$\\frac{d[NH3]}{dt} = -\\frac{106}{16}\\cdot R$", correct=FALSE),
  answer("$\\frac{d[N2]}{dt} = 2\\cdot R$", correct=FALSE),
- answer("$\\frac{d[N2]}{dt} = (2/5)\\cdot R$", correct=TRUE),
- answer("$\\frac{d[N2]}{dt} = (4/5)\\cdot R$", correct=FALSE),
+ answer("$\\frac{d[N2]}{dt} = \\frac{2}{5}\\cdot R$", correct=TRUE),
+ answer("$\\frac{d[N2]}{dt} = \\frac{4}{5}\\cdot R$", correct=FALSE),
  answer("$\\frac{d[N2]}{dt} = 4\\cdot R$", correct=FALSE),
  answer("$\\frac{d[N2]}{dt} = R$", correct=FALSE),
- answer("$\\frac{d[N2]}{dt} = (1/2)\\cdot R$", correct=FALSE),
+ answer("$\\frac{d[N2]}{dt} = \\frac{1}{2}\\cdot R$", correct=FALSE),
  
  incorrect=msg,
  correct=msg)
