--- a/inst/tutorials/06largescale/largescale.Rmd
+++ b/inst/tutorials/06largescale/largescale.Rmd
@@ -27,16 +27,16 @@ There are no corresponding sections in the textbook.
 
 ## Two-box model
 
-Figure below shows a conceptual diagram of a system in a **steady state**, including the rate laws describing the fluxes of carbon (C) between the compartments A and B. The values of X, Y and Z are $X=500$, $Y=2500$, $Z=50$.
+Figure below shows a conceptual diagram of a two-compartment system in a **steady state**, where carbon (C) flows between the compartments A and B. The carbon fluxes are described by first-order kinetics with respect to the C content in the source compartment. The corresponding values of X, Y and Z are $X=500$ (Pg C), $Y=2500$ (Pg C), and $Z=50$ (Pg C yr$^{-1}$).
 
 ![](images/TwoBox.png){width=14cm}
 
 The R chunk below sets the values of these variables/parameters.
 
 ```{r rab-setup}
-X <- 500
-Y <- 2500
-Z <- 50
+X <- 500   # Pg C
+Y <- 2500  # Pg C
+Z <- 50    # Pg C yr-1
 ```
 
 ```{r}
@@ -62,13 +62,12 @@ print(rBA)
 ```{r rab-solution1, echo=FALSE}
 msg <- sprintf("The rate constant $r_{AB}$ relates to the total flux $F_{AB}$ as : $r_{AB}=F_{AB}/A$; the steady-state value of $F_{AB}$ and $A$ are given by $Z=50$ and $X=500$ respectively, so the answer is: $r_{AB}= Z/X$")
 
-question("What is the value of the rate constant $r_{AB}$?", type = "learnr_radio",
+question("What is the value of the rate constant $r_{AB}$? (Note: 'dot' is used as a decimal separator)", type = "learnr_radio",
  answer(sprintf("%.3f $yr^{-1}$", Z/Y)),
  answer(sprintf("%.3f $yr^{-1}$", X/Z)),
  answer(sprintf("%.2f $yr^{-1}$", Z/X), correct=TRUE),
  incorrect = msg,   
  correct = msg
- 
 )
 ```
 
@@ -80,45 +79,15 @@ question("What is the value of the rate constant $r_{BA}$?", type = "learnr_radi
 )
 ```
 
-Use R to estimate the residence time of carbon in the reservoir A ($\tau_{A}$) and B ($\tau_{B}$) using the values of X, Y and Z given above.
-
-```{r tab, exercise=TRUE}
-# fill in the formulas
-tA <- 
-print(tA)
-tB <- 
-print(tB)
-```
-
-<div id="tab-hint">
-**Hint:** Residence time is the amount of material in the reservoir ($[Pg~C]$) divided by the outflow ($[Pg~C~yr^{-1}]$).
-</div>
-
-```{r ta-solution1, echo=FALSE}
-question("What is the value of the residence time $\\tau_{A}$?", type = "learnr_radio",
- answer(sprintf("%.3f $yr$", X/Y)),
- answer(sprintf("%.3f $yr$", X/Z), correct=TRUE),
- answer(sprintf("%.2f $yr$", Z/X))
-)
-```
-
-```{r tb-solution1, echo=FALSE}
-question("What is the value of the residence time $\\tau_{B}$?", type = "learnr_radio",
- answer(sprintf("%.3f $yr$", Y/Z), correct=TRUE),
- answer(sprintf("%.3f $yr$", Z/X)),
- answer(sprintf("%.2f $yr$", Z/Y))
-)
-```
-
 ## Implementation in R
 
-Based on the reader that has introduced you to solving dynamic models in R, it should be rather easy to understand the following R-code that implements the two-box model above in R.
+Based on the reader that has introduced you to solving dynamic models in R, it should be rather easy for you to understand the following R-code that implements the two-box model above in R.
 
 Modify the R-code to implement two types of perturbation of the system: 
 
-* *Deforestation*, which is modeled by assuming that $100~Pg~C$ was instantaneously moved from the reservoir B (biosphere) to the reservoir A (atmosphere).
+* **Deforestation**, which is modeled by assuming that $100~Pg~C$ was instantaneously moved from the reservoir B (biosphere) to the reservoir A (atmosphere).
 
-* *Burning of fossil fuels*, which is modeled by assuming that $100~Pg~C$ was instantaneously added to the reservoir A (atmosphere) from an external reservoir (fossil fuels) that is not part of the model.
+* **Burning of fossil fuels**, which is modeled by assuming that $100~Pg~C$ was instantaneously added to the reservoir A (atmosphere) from an external reservoir (fossil fuels) that is not part of the model, whereas the initial size of B remained unchanged.
 
 Note that after some time the system reaches a steady state. Think how this steady state depends on the type of perturbation.
 
@@ -153,33 +122,164 @@ out2 <- ode(y=state.ini2, time=t.seq, func=model2box, parms=pars)
 plot(out1,out2, lwd=2, mfrow=c(1,3))  # plot solutions
 ```
 
-## Challenging questions - response time and equilibrium
+## Residence time, response time, and equilibrium - theory
+
+In this section, which will be somewhat theoretical, we will explain important concepts including **residence time**, **response time**, and **equilibrium**. 
+
+You will need some basic knowledge of calculus to clearly understand the derivations and arguments below. If you do not have such knowledge, do not worry; just read on to see how much you can understand. Alternatively, you can skip the derivations and read only the key results at the bottom of this tab (section Conclusive remarks).
+
+We will analyze here in greater detail the model depicted by the conceptual diagram below.
+
+![](images/TwoBox.png){width=8cm}
+
+### Uncoupled compartments
+
+First, we assume that the two compartments $A$ and $B$ in the model above are *not* coupled. That is, we assume that carbon only flows *out* of $A$ (with an efflux $F_{AB}$) and *out* of $B$ (with an efflux $F_{BA}$) and there is *no feedback*. 
+
+Due to the lack of feedback from $B$, the dynamics of the carbon content in $A$ is described by the following differential equation (DE):
+$$ \frac{dA}{dt} = -r_{AB}\cdot A $$
+The solution to this DE is an exponential function of time:
+$$ A(t) = A_{ini}\cdot e^{-r_{AB}\cdot t} \qquad\qquad [1]$$
+where $A_{ini}$ is the initial value of $A$. The validity of this statement can be directly verified by calculating the time-derivative of $A(t)$, using the chain rule and other rules of calculus.
+
+The solution in Eq. [1] can be rewritten according to
+$$ A(t) = A_{ini}\cdot e^{-t/\tau_{A}} \qquad\qquad [2]$$
+where the parameter $\tau_A$ is defined according to
+$$ \tau_{A} \equiv \frac{1}{r_{AB}} \qquad\qquad [3]$$
+
+Because this parameter is equal to the amount of carbon in $A$ (e.g., [$Pg~C$]) divided by the efflux (e.g., [$Pg~C~yr^{-1}$]), we call it the **residence time** of carbon in the compartment $A$. 
+
+Equation [2] shows that $\tau_A$ can also be interpreted as a time interval over which the amount of carbon in the compartment $A$ decreases from the initial value of $A_{ini}$ by a factor of $e^{-1}\approx 0.37$ as a result of the efflux $F_{AB} = r_{AB}\cdot A$. Note that at $t=3\cdot \tau_A$, the amount of carbon in $A$ decreases by a factor of $e^{-3}\approx 0.05$, i.e., to about 5% of the initial value.
+
+Similarly, in the absence of a feedback from $A$, the dynamics of the carbon content in $B$ is described by
+$$ \frac{dB}{dt} = -r_{BA}\cdot B $$
+By solving this DE, we obtain that the carbon content in $B$ decreases exponentially over time according to
+$$ B(t) = B_{ini}\cdot e^{-t/\tau_{B}}, \qquad\qquad [4]$$
+where 
+$$\tau_{B} \equiv \frac{1}{r_{BA}}\qquad\qquad [5]$$
+is the **residence time** of carbon in the compartment $B$.
+
+### Coupled compartments
+
+Now, we assume that the two compartments $A$ and $B$ in the model above *are* coupled. In this case, the dynamics of carbon in $A$ and $B$ are described by a set of *coupled* differential equations:
+
+$$\frac{dA}{dt} = -r_{AB}\cdot A + r_{BA}\cdot B \qquad\qquad [6a]$$
+$$\frac{dB}{dt} = r_{AB}\cdot A - r_{BA}\cdot B \qquad\qquad [6b]$$
+
+From calculus we know that the solution to these differential equations has the following form: 
+$$A(t)=A_{eq} + \Delta A\cdot e^{-r\cdot t}\qquad\qquad [7a]$$
+$$B(t) = B_{eq} + \Delta B\cdot e^{-r\cdot t}\qquad\qquad [7b]$$
+We can verify this by direct substitution, as shown in the following. Along the way, we will identify relevant relationships between the parameters $A_{eq}$, $B_{eq}$, $r$, $\Delta A$, and $\Delta B$.
+
+First, we calculate the time-derivative of $A$ and substitute the result together with expressions [7a-b] to equation [6a]. We obtain:
+$$-r\cdot \Delta A\cdot e^{-r\cdot t} = -r_{AB}\cdot A_{eq} - r_{AB}\cdot \Delta A\cdot e^{-r\cdot t} + r_{BA}\cdot B_{eq} + r_{BA}\cdot \Delta B\cdot e^{-r\cdot t} \qquad\qquad [8]
+$$
+
+Second, because the previous equation [8] must be valid for *any* time $t$, the terms with and without $t$ must be equal to each other on both sides of this equation. Specifically, for terms without $t$, we have:
+$$0 = - r_{AB}\cdot A_{eq} + r_{BA}\cdot B_{eq} \qquad\qquad [9a]$$
+and for terms with $t$, we have
+$$-r\cdot \Delta A\cdot e^{-r\cdot t} = - r_{AB}\cdot \Delta A\cdot e^{-r\cdot t} + r_{BA}\cdot \Delta B\cdot e^{-r\cdot t}\qquad\qquad [9b]$$
+
+Third, the *total* carbon content in $A$ and $B$ is *constant*, as follows from the fact that the time derivative of $A+B$ is equal to zero:
+$$\frac{d(A+B)}{dt} = [Eq. 6a] + [Eq. 6b] = 0 $$
+We denote this constant using the initial amounts of carbon in $A$ and $B$, i.e.,
+$$A(t) + B(t) = A_{ini} + B_{ini}\qquad\qquad [10]$$
+
+By combining equations [7a-b] and [10], we obtain
+$$ A_{eq}+B_{eq} = A_{ini}+B_{ini} \qquad\qquad [11a]$$
+$$ \Delta B = -\Delta A\qquad \qquad [11b]$$
+
+Forth, by combining equations [9b] and [11b], we obtain 
+$$r = r_{AB} + r_{BA} \qquad [11b] $$
+
+### Conclusive remarks
+
+1. The above analysis shows that the temporal variation of the carbon content in $A$ and $B$ is described by the *same* exponential function. Specifically, it can be written according to (see Eqs. [7a-b] and [11b])
+$$A(t)=A_{eq} + \Delta A\cdot e^{-t/\tau_{AB}}\qquad\qquad [12a]$$
+$$B(t) = B_{eq} - \Delta A\cdot e^{-t/\tau_{AB}}\qquad\qquad [12b]$$
+
+2. The parameter $\tau_{AB}$ is called the **response time** of the system and is calculated according to (see Eqs. [7a-b] and [11b])
+$$
+\tau_{AB} \equiv \frac{1}{r} = \frac{1}{r_{AB} + r_{BA}}\qquad\qquad [13]
+$$
+
+3. When $t$ is very large ($t\gg \tau_{AB}$), the values of $A$ and $B$ approach $A_{eq}$ and $B_{eq}$, respectively. We call these values **equilibrium values**. Equation [9a] shows that the equilibrium values are related according to
+$$r_{AB}\cdot A_{eq} = r_{BA}\cdot B_{eq}\qquad\qquad [14]$$
+
+4. Relationship [11a], which we reproduce here as Eq. [15],
+$$ A_{eq}+B_{eq} = A_{ini}+B_{ini} \qquad\qquad [15]$$
+represent the **conservation of carbon in the system**.
+
+5. By combining equations [14] and [15] and solving for $A_{eq}$ and $B_{eq}$, we obtain (we encourage you to verify this by yourself):
+$$ A_{eq} = \frac{r_{BA}}{r_{AB}+r_{BA}}\cdot (A_{ini} + B_{ini}) \qquad\qquad [16a]$$
+$$ B_{eq} = \frac{r_{AB}}{r_{AB}+r_{BA}}\cdot (A_{ini} + B_{ini}) \qquad\qquad [16b]$$
+These relationships allow us to calculate the equilibrium values $A_{eq}$ and $B_{eq}$ from the initial *total* carbon content in the two-compartment system and the corresponding rate constants $r_{AB}$ and $r_{BA}$.
+
+
+## Residence time, response time, and equilibrium - questions
+
+Use R to estimate the **residence time** of carbon in the reservoir $A$ ($\tau_{A}$) and $B$ ($\tau_{B}$) using the values of X, Y and Z given earlier in this tutorial.
+
+```{r tab-setup}
+X <- 500
+Y <- 2500
+Z <- 50
+```
+
+```{r tab, exercise=TRUE}
+# fill in the formulas
+tA <- 
+print(tA)
+tB <- 
+print(tB)
+```
+
+<div id="tab-hint">
+**Hint:** Residence time is the amount of material in the reservoir ($[Pg~C]$) divided by the outflow ($[Pg~C~yr^{-1}]$).
+</div>
+
+```{r ta-solution1, echo=FALSE}
+question("What is the value of the residence time $\\tau_{A}$? (Note: 'dot' is used as a decimal separator)",
+         type = "learnr_radio",
+ answer(sprintf("%.3f $yr$", X/Y)),
+ answer(sprintf("%.3f $yr$", X/Z), correct=TRUE),
+ answer(sprintf("%.2f $yr$", Z/X))
+)
+```
+
+```{r tb-solution1, echo=FALSE}
+question("What is the value of the residence time $\\tau_{B}$?", type = "learnr_radio",
+ answer(sprintf("%.3f $yr$", Y/Z), correct=TRUE),
+ answer(sprintf("%.3f $yr$", Z/X)),
+ answer(sprintf("%.2f $yr$", Z/Y))
+)
+```
 
 To challenge yourself, try to solve the following questions.
 
-The system has been perturbed from the steady state by adding 100 Pg C from an external source to A. This perturbation did not affect the rate laws nor the rate constants. After some time, the system returned to a new steady state (new equilibrium).
+The system has been **perturbed** from the steady state by adding 100 Pg C from an *external* source to $A$. This perturbation did not affect the rate laws nor the rate constants. After some time, the system returned to a new steady state (new equilibrium).
 
-Quantify the *response time* of the system ($\tau_{AB}$), and the amounts of carbon in both reservoirs in this new equilibrium ($A_{eq}$ and $B_{eq}$). Use R and the values of X, Y and Z defined earlier in this tutorial to calculate $\tau_{AB}$, $A_{eq}$ and $B_{eq}$. Use the R-code from the earlier part of this tutorial to verify that your calculated values agree with those predicted by the numerical model.
+Quantify the **response time** of the system ($\tau_{AB}$), and the amounts of carbon in both reservoirs in this new equilibrium ($A_{eq}$ and $B_{eq}$). Use the values of X, Y and Z defined earlier to calculate $\tau_{AB}$, $A_{eq}$ and $B_{eq}$. Use the R-code from the earlier part of this tutorial to verify that your calculated values agree with those predicted by the numerical model.
+
+```{r Tab-setup}
+X <- 500
+Y <- 2500
+Z <- 50
+```
 
 ```{r Tab, exercise=TRUE}
-tau.AB  <- # enter formula
-A.eq    <- # enter formula
-B.eq    <- # enter formula
+tau.AB  <-     # enter formula
+A.eq    <-     # enter formula
+B.eq    <-     # enter formula
 c(tau.AB=tau.AB, A.eq=A.eq, B.eq=B.eq)
 ```
 
 <div id="Tab-hint">
-**Hint:** To solve this exercise, use first the 'pen & paper method' and do a little bit of maths.
-<BR> 1. Write the mass balance equations for $A$ and $B$. Substitute $$A=A_{eq} + \Delta A\cdot e^{-r\cdot t}$$ as a solution for $A$, and $$B = B_{eq} + \Delta B\cdot e^{-r\cdot t}$$ as a solution for $B$, where $r$ is a parameter describing the rate of decay in the carbon content in both reservoirs. Verify that these functions are, indeed, solutions to the mass balance equations for $A$ and $B$.
-<BR> 2. If you assume that $t$ is a very large number ($t\gg 1/r$), i.e., corresponding to time when the system reaches an equilibrium, you will be able to derive the following relationship: $$r_{AB}\cdot A_{eq} = r_{BA}\cdot B_{eq}$$. 
-<BR> 3. If you consider that $A+B$ must remain constant at *all* times (conservation of carbon in the system), you will be able to derive the following relationship: $$\Delta A = -\Delta B$$.
-<BR> 4. By simplifying the equation obtained in step 1, and combining it with relationships obtained in steps 2 and 3, you will be able to derive a relationship for $r$. The *response time* is then calculated, by definition, as $$\tau_{AB}=1/r.$$
-<BR> 5. The conservation of carbon in the system (point 3) implies a relationship $$A_{eq}+B_{eq} = A_{ini}+B_{ini},$$ where $A_{ini}$ and $B_{ini}$ are the initial values of $A$ and $B$, respectively, determined from $X$, $Y$ and the magnitude of the perturbation (now 100 Pg C).
-<BR> 6. By combining the relationships obtained in steps 2 and 5, you will be able to derive formulas for $A_{eq}$ and $B_{eq}$. As mentioned above, most of this exercise should be solved using the 'pen & paper method'.
+**Hint:** Check the theory explained earlier in this tutorial, especially equations [13-16]. 
 </div>
 
 ```{r Tab-solution1, echo=FALSE}
-msg <- "Using the hint, you should be able to derive the formula $r=r_{AB}+r_{BA}$, from which you can calculate $\\tau_{AB}$."
+msg <- "The response time is calculated using equation [13] derived in the earlier part of this tutorial."
 
 
 question("What is the value of the response time $\\tau_{AB}$?", type = "learnr_radio",
@@ -193,7 +293,7 @@ question("What is the value of the response time $\\tau_{AB}$?", type = "learnr_
 ```
 
 ```{r Tab-solution2, echo=FALSE}
-msg <- "Using the hint, you should be able to derive the formula $$A_{eq}=\\frac{r_{BA}}{r_{AB}+r_{BA}}\\cdot (A_{ini}+B_{ini}),$$ from which you can calculate $A_{eq}$ considering that $A_{ini}+B_{ini}=X+Y+100$."
+msg <- "$A_{eq}$ is calculated using equation [16a] in this tutorial and taking into account that the initial carbon content in the perturbed system is $A_{ini}+B_{ini}=X+Y+100$."
 
 question("What is the value of the equilibrium carbon content in reservoir A?", type = "learnr_radio",
  answer(sprintf("%.3f $Pg~C$", Y/(X+Y)*(X+Y+100))),
@@ -206,7 +306,7 @@ question("What is the value of the equilibrium carbon content in reservoir A?", 
 ```
 
 ```{r Tab-solution3, echo=FALSE}
-msg <- "Using the hint, you should be able to derive the formula $$B_{eq}=\\frac{r_{AB}}{r_{AB}+r_{BA}}\\cdot (A_{ini}+B_{ini}),$$ from which you can calculate $B_{eq}$ considering that $A_{ini}+B_{ini}=X+Y+100$."
+msg <- "$B_{eq}$ is calculated using equation [16b] in this tutorial and taking into account that the initial carbon content in the perturbed system is $A_{ini}+B_{ini}=X+Y+100$."
 
 question("What is the value of the equilibrium carbon content in reservoir B?", type = "learnr_radio",
  answer(sprintf("%.3f $Pg~C$", Y/(X+Y)*(X+Y+100)), correct=TRUE),
@@ -220,16 +320,18 @@ question("What is the value of the equilibrium carbon content in reservoir B?", 
 
 ## More exercises
 
-To apply the knowledge you gained so far, expand the 2-box model from this tutorial towards a more complicated system: the Earth's global carbon cycle.
+To apply the knowledge you gained so far, expand the 2-box model from this tutorial towards a more complicated system: the Earth's global carbon cycle comprising 7 reservoirs.
 
-Type the following commands in the R console to get the full description of this exercise.
+Enter the following commands in the R console to get the full description of this exercise.
 
 ```
 require(RTM)
 RTMexercise("carbonCycle")
 ```
 
-The global carbon cycle model is a wonderful example of models that study the response of perturbed systems. If you are curious and would like to learn more about perturbed systems, and specifically about how to find the time scales on which they respond --- the so-called *response time* --- you can do so by studying the following extra readers.
+### Extra challenging
+
+The global carbon cycle model is a wonderful example of models that study the response of perturbed systems. If you are curious and would like to learn more about perturbed systems, and specifically about a method that allows you to find the characteristic time scales of their response, you can do so by studying the following extra readers. Note that the topics covered in these readers are extra challenging and require somewhat advanced knowledge of calculus and algebra.
 
 ```
 RTMreader("perturbation_I", output="PDF")
